Update SEO metadata, improve site performance, and restructure navigation. Enhanced index.html with additional meta tags for better search visibility. Updated .htaccess for compression, caching, and security headers. Added sitemap.xml for improved indexing. Removed Knowledge Hub pages and adjusted pricing model to reflect new monthly rate of $200. Updated contact support email and adjusted related components accordingly.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>SolHub</title>
+  <title>SolHub - Software Médico Inteligente para Laboratorios</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="SolHub - IA que potencia el diagnóstico médico en Venezuela" />
+  <meta name="keywords" content="SolHub, software médico, laboratorio médico, IA médica, Venezuela, Solware" />
+  <meta property="og:title" content="SolHub - Software Médico Inteligente" />
+  <meta property="og:description" content="Transforma tu laboratorio médico con SolHub by Solware. Módulos inteligentes con IA, seguridad por sede, gestión completa y reportes avanzados." />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="SolHub" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="SolHub - Software Médico Inteligente" />
+  <meta name="twitter:description" content="Transforma tu laboratorio médico con SolHub by Solware" />
   <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
   <link rel="manifest" href="/manifest.json" />
-<script type="module" src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fsolhub.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.8"></script>
+<!-- <script type="module" src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fsolhub.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.8"></script> -->
 </head>
 
 <body>
