Update favicon and logo assets; integrate Vercel Analytics. Replace existing favicon with a new 192x192 version and update manifest.json accordingly. Introduce a new SolHub logo in .webp format for improved visuals in the footer and header components. Enhance PlatformPreview with an interactive iframe demo link.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="SolHub - Software Médico Inteligente" />
   <meta name="twitter:description" content="Transforma tu laboratorio médico con SolHub by Solware" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
+  <link rel="icon" type="image/png" href="/favicon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-192x192.png" />
+  <link rel="apple-touch-icon" sizes="192x192" href="/favicon-192x192.png" />
   <link rel="manifest" href="/manifest.json" />
 <!-- <script type="module" src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fsolhub.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.8"></script> -->
 </head>
